2005-07-12  Not Zed  <NotZed@Ximian.com>

	* startup-wizard.c: removed all the importer stuff.  fixed the
	copyright.

2005-07-06  Frederic Crozat  <fcrozat@mandriva.com>

	* startup-wizard.c: (startup_wizard_delete), (startup_wizard):
	Exit evolution when closing wizard using window manager
	control ; don't set hint or wmclass, it is too late, window is already
	realized.

2005-06-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use NO_UNDEFINED. Link with more libraries.

2005-06-18  Tor Lillqvist  <tml@novell.com>

	* org-gnome-evolution-startup-wizard.eplug.xml: Use SOEXT.

2005-05-12  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: added built_sources/cleanfiles

2005-05-06  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: 
	* org-gnome-evolution-startup-wizard.eplug.xml: s/.in/.xml/ & i18n.

2005-02-21  JP Rosevear  <jpr@novell.com>

	* startup-wizard.c: A plugin the does the startup wizard
